# dist-milp

./: .gitignore  CMakeLists.txt  README.md  copy_to_others.sh  machinefile.txt  ssh_rpi_node.sh
apps/: APP_LED.cpp  APP_LED.hpp  APP_PATH.cpp  APP_PATH.hpp  APP_PID.cpp  APP_PID.hpp  APP_REALLOCATOR.cpp  APP_REALLOCATOR.hpp
include/: APP_INCLUDE.hpp  CPLEX_SOLVER.hpp  DIST_MILP_SOLVER.hpp  ENGINE.hpp  GLPK_SOLVER.hpp  MY_INCLUDE.hpp  MY_MACROS.hpp  NOC.hpp  NOC_APP.hpp  NOC_CPLEX.hpp  NOC_FAULT.hpp  NOC_GLPK.hpp  NOC_MPI.hpp
lib/: MathHelperFunctions.cpp  MathHelperFunctions.hpp  PhidgetHelperFunctions.cpp  PhidgetHelperFunctions.h
scripts/: fake_mac.txt  rsync_dist_milp.sh  ssh_rpi_node.sh  test_comm.py
src/: CPLEX_SOLVER.cpp  DIST_MILP_SOLVER.cpp  ENGINE.cpp  GLPK_SOLVER.cpp  NOC.cpp  NOC_APP.cpp  NOC_CPLEX.cpp  NOC_FAULT.cpp  NOC_GLPK.cpp  NOC_MPI.cpp  main.cpp  tmr.c  wrtnode.c
utils/: PhidgetHelperFunctions.hpp  udp_driver.cpp  udp_driver.h
